<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#131313"
    tools:context=".FilmDataActivity">

    <TextView
        android:id="@+id/textNombrePeli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="15dp"
        android:text="@string/nombrePeliMain"
        android:textColor="#F6F1F1"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonVPR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonVolver"
        android:layout_marginStart="90dp"
        android:layout_marginTop="50dp"
        android:onClick="btnVPR"
        android:text="@string/btnVPR" />

    <Button
        android:id="@+id/buttonVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textNombrePeli"
        android:layout_marginStart="184dp"
        android:layout_marginTop="50dp"
        android:onClick="btnBackToMain"
        android:text="@string/btnVolver" />

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textNombrePeli"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:onClick="btnEP"
        android:text="@string/btnEditar" />

</RelativeLayout>
